--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,13 +1,10 @@
+providers = ["php"]
+
 [phases.setup]
-nixPkgs = [
-  "php81",
-  "php81Packages.composer"
-]
+nixPkgs = ["php81", "php81Packages.composer"]
 
 [phases.install]
-cmds = [
-  "composer install --no-dev --optimize-autoloader"
-]
+cmds = ["composer install --no-dev --optimize-autoloader"]
 
 [start]
 cmd = "php artisan serve --host=0.0.0.0 --port=$PORT"
